[gd_scene load_steps=12 format=3 uid="uid://ba44u54lvxytj"]

[ext_resource type="PackedScene" uid="uid://daos372jp6yl5" path="res://scenes/enemies/base_enemy/base_enemy.tscn" id="1_yawp4"]
[ext_resource type="Script" path="res://scenes/enemies/eagle/eagle.gd" id="2_t2v5r"]
[ext_resource type="Texture2D" uid="uid://cbl1of7ww50pm" path="res://assets/enemies/eagle/eagle-attack.png" id="3_t1vk1"]
[ext_resource type="PackedScene" uid="uid://bmytss08as72k" path="res://scenes/shooter/shooter.tscn" id="4_8jxoj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lnpfp"]
atlas = ExtResource("3_t1vk1")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxxno"]
atlas = ExtResource("3_t1vk1")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_johqq"]
atlas = ExtResource("3_t1vk1")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lfk5"]
atlas = ExtResource("3_t1vk1")
region = Rect2(120, 0, 40, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdxt4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnpfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxxno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_johqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lfk5")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbubl"]
size = Vector2(9, 7.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_bjyaa"]
radius = 11.0

[node name="Eagle" instance=ExtResource("1_yawp4")]
collision_mask = 0
script = ExtResource("2_t2v5r")

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_mdxt4")
animation = &"fly"
frame_progress = 0.985526

[node name="TurnTimer" type="Timer" parent="." index="2"]
wait_time = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
shape = SubResource("RectangleShape2D_jbubl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-1, 4)
shape = SubResource("CircleShape2D_bjyaa")

[node name="Shooter" parent="." index="5" instance=ExtResource("4_8jxoj")]
position = Vector2(0, 12)
speed = 120.0
bullet_type = 1
shoot_delay = 0.5

[node name="PlayerDetector" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerDetector" index="0"]
polygon = PackedVector2Array(-15, 10, -80, 147, -1, 147)

[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
[connection signal="area_entered" from="PlayerDetector" to="." method="_on_player_detector_area_entered"]
[connection signal="area_exited" from="PlayerDetector" to="." method="_on_player_detector_area_exited"]
